# The-Wanderer----VERSION-2.0

./: .replit  README.md  ai_talk.py  battle.py  database.py  main.py  my_map.py  notes.txt  pyproject.toml  rob_infant.py  secret_lib_thing.py  shop.py  util.py
maps/: kreiten_castle_map.txt  the_wastes_map.txt
stuff/: ai_talk.py  battle.py  boss_fight.py  database.py  main.py  multi_battle.py  my_map.py  secret_lib_thing.py  sell.py  shop.py  skirmish.py  util.py
stuff/maps/: beggar_city.txt  far_lands.txt  iron_clan.txt  kreiten_castle_map.txt  monster_lands.txt
